<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inclass4.MainActivity">

    <TextView
        android:id="@+id/textView_countStatic"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_countStaticString"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_countDynamic"
        android:layout_width="137dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_countDynamicString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_countStatic"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_count"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="301dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:max="10"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_countDynamic" />

    <TextView
        android:id="@+id/textView_lengthStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/textView_lengthStaticString"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_count" />

    <TextView
        android:id="@+id/textView_lengthDynamic"
        android:layout_width="137dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/textView_lengthDynamicString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_lengthStatic"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_count" />

    <SeekBar
        android:id="@+id/seekBar_length"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="330dp"
        android:layout_height="19dp"
        android:layout_marginTop="36dp"
        android:max="23"
        android:progress="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_lengthDynamic" />

    <TextView
        android:id="@+id/textView_passDynamic"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_passDynamicString"
        app:layout_constraintBottom_toTopOf="@+id/button_Thread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_length"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/button_Thread"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/button_ThreadString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_passStatic" />

    <Button
        android:id="@+id/button_Async"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_AsyncString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Thread" />

    <TextView
        android:id="@+id/textView_passStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/textView_passStaticString"
        app:layout_constraintEnd_toStartOf="@+id/textView_passDynamic"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_length" />

    <TextView
        android:id="@+id/textView_generate"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_generateString"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Async" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="221dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_generate" />

</android.support.constraint.ConstraintLayout>
